20190128: kleine Designanpassungen 20190127: heureka, das erste Mal die App online auf den Webserver gelegt :-) 20190123: Test Produktiv, d.h. ng --prod es sind noch einige Fehlermeldungen zu elimieren 20190118: div. Anpassungen, damit auf dem IPhone die Bildschirminhalte nicht über 100% gross werden -> dies führt zu komischen Vergrösserungseffekten bei Eingaben, z.B. Datum und Uhrzeit oder auch bei Select's 20190114: Commit 20190104: wie 20190103, aber neu werden Breakpointänderungen live aktualisiert (erstmal bei Komp. "termin-liste")           -> neu: globale Variablen via Angular dependency injection (Singleton in AppModule)           -> Breakpoints werden in AppModule über den Window-Resizeevent aktualisiert 20190103: Breakpoint-Handling, Ein-/Ausblenden von Spalten je nach Breakpoints 20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.html
@@ -1,7 +1,43 @@
 <div class="termine-edit container-fluid" id="page-top">
 
   <div aria-label="Termin-Edit Toolbar" class="mytoptoolbar btn-toolbar justify-content-between" role="toolbar">
-    <div class="btn-group btn-group-sm mr-2" role="group">
+
+
+      <div class="btn-group btn-group-sm mr-2" role="group">
+        <button *ngIf="editMode" [disabled]="form.invalid"
+                class="btn btn-sm btn-success"
+                (click)="onSubmit()"
+                type="button">
+          <i class="fas fa-save"></i>
+          Speichern
+        </button>
+        <button *ngIf="!editMode" [disabled]="form.invalid"
+                class="btn btn-sm btn-success"
+                (click)="onSubmit()"
+                type="button">
+          <i class="fas fa-plus-circle"></i>
+          Termin neu
+        </button>
+        <div class="btn-group btn-group-sm" role="group">
+          <button (click)="onBack()"
+                  class="btn btn-sm btn-secondary col-sm-12"
+                  type="button">
+            <i class="fas fa-arrow-alt-circle-left"></i>
+            Zurück
+          </button>
+        </div>
+      </div>
+      <div class="btn-group btn-group-sm float-right" role="group">
+        <button (click)="onShowDataJson('debug-info-page')" class={{showDebugInfoBtnClass}} id="btnShowDataJson"
+                type="button">
+          <i class={{showDataJsonBtnIcon}}></i>
+          {{showDataJsonTitle}}
+        </button>
+      </div>
+    </div>
+
+
+    <!--<div class="btn-group btn-group-sm mr-2" role="group">
       <button (click)="onSubmit()" *ngIf="editMode"
               [disabled]="form.invalid"
               class="btn btn-sm btn-success"
@@ -32,12 +68,13 @@
       </button>
     </div>
   </div>
+-->
 
+  <!--<div class="title" *ngIf="editMode">Termin: {{title}}</div>-->
 
-  <div class="title">Termin: {{title}}</div>
-  <div *ngIf="master">
+  <!--<div *ngIf="master" >
     <h5>Termin: {{master}}</h5>
-  </div>
+  </div>-->
 
   <form (ngSubmit)="onSubmit()" [formGroup]="form" autocomplete="off">
 
@@ -285,7 +322,7 @@
   </form>
 </div>
 
-<!--<div id="debug-info-page">
+<div id="debug-info-page">
   <div *ngIf="showDataJson">
     <div class="form-debug-info">
       <div class="row">
@@ -323,4 +360,4 @@
       </div>
     </div>
   </div>
-</div>-->
+</div>
