--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
@@ -1,8 +1,19 @@
-<h3 xmlns:Background-color="http://www.w3.org/1999/xhtml">{{title}}</h3>
+<div class="container-fluid">
+  <div class="row">
+    <h4>{{title}}</h4>
+    <button *ngIf="!showAllData"
+            class="btn btn-sm btn-primary ml-auto"
+            (click)="onCreate()">
+      <i class="fa fa-plus-circle"></i>
+      neue Aktivität
+    </button>
+  </div>
+</div>
+
+
 <div *ngIf="code_aktivitaeten.length > 0">
   <div class="table-responsive">
-    <table class="table table-hover questions">
-      <!--<colgroup> <col width="90px">  </colgroup>-->
+    <table class="table table-hover table-striped questions">
       <thead>
       <tr>
         <th>Code</th>
@@ -15,20 +26,29 @@
         <th *ngIf="globals.bp_isMidOrWideScreen">Ende</th>
         <th *ngIf="globals.bp_isMidOrWideScreen"></th>
         <th *ngIf="globals.bp_isMidOrWideScreen">Summieren</th>
-        <th></th>
+        <th *ngIf="globals.bp_isMidOrWideScreen"></th>
         <th></th>
         <th></th>
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let aktivitaet of code_aktivitaeten">
+      <tr *ngFor="let aktivitaet of code_aktivitaeten"
+          [class.selected]="aktivitaet === selectedAktivitaet"
+          (click)="onEdit(aktivitaet)">
         <td>{{aktivitaet.Code}}</td>
         <td>{{aktivitaet.Bezeichnung}}</td>
         <td *ngIf="globals.bp_isMidOrWideScreen">{{aktivitaet.GruppeCode}}</td>
-        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.GanzerTag" onclick="return false;"/></td>
-        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.ZeitUnbestimmt" onclick="return false;"/></td>
-        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.ShowZeiten" onclick="return false;"/></td>
-        <td *ngIf="globals.bp_isMidOrWideScreen && aktivitaet.ShowZeiten">{{aktivitaet.ZeitBeginn | date: 'HH:mm'}}</td>
+        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;"><input type="checkbox"
+                                                                                   [checked]="aktivitaet.GanzerTag"
+                                                                                   onclick="return false;"/></td>
+        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;"><input type="checkbox"
+                                                                                   [checked]="aktivitaet.ZeitUnbestimmt"
+                                                                                   onclick="return false;"/></td>
+        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;"><input type="checkbox"
+                                                                                   [checked]="aktivitaet.ShowZeiten"
+                                                                                   onclick="return false;"/></td>
+        <td
+          *ngIf="globals.bp_isMidOrWideScreen && aktivitaet.ShowZeiten">{{aktivitaet.ZeitBeginn | date: 'HH:mm'}}</td>
         <td *ngIf="globals.bp_isMidOrWideScreen && aktivitaet.ShowZeiten">{{aktivitaet.ZeitEnde | date: 'HH:mm'}}</td>
         <td *ngIf="globals.bp_isMidOrWideScreen && !aktivitaet.ShowZeiten"></td>
         <td *ngIf="globals.bp_isMidOrWideScreen && !aktivitaet.ShowZeiten"></td>
@@ -36,7 +56,7 @@
           <p class="square" [style.background-color]=[aktivitaet.Farbe]></p>
         </td>
         <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;">
-          <input type="checkbox"  [checked]="aktivitaet.Summieren" onclick="return false;"/>
+          <input type="checkbox" [checked]="aktivitaet.Summieren" onclick="return false;"/>
         </td>
         <td>
           <button type="submit"
@@ -61,13 +81,14 @@
 </div>
 
 <div *ngIf="code_aktivitaeten.length == 0">
-  Diese Gruppe hat (noch) keine Aktivitäten: klicke auf <strong>Neue Aktivität erstellen</strong> Button um die Erste zu erfassen!
+  Diese Gruppe hat (noch) keine Aktivitäten: klicke auf <strong>Neue Aktivität erstellen</strong> Button um die Erste
+  zu erfassen!
 </div>
 
-<button *ngIf="!showAllData" (click)="onCreate()" class="btn btn-sm btn-primary">
+<!--<button *ngIf="!showAllData" (click)="onCreate()" class="btn btn-sm btn-primary">
   <i class="fa fa-plus-circle"></i>
   Neue Aktivität erstellen
-</button>
+</button>-->
 
 
 <!--<div class="form-group commands">
@@ -85,3 +106,4 @@
     <pre class="code-preview">{{code_aktivitaeten | json}}</pre>
   </div>
 </div>
+
