--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.scss
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.scss
@@ -2,7 +2,7 @@
   width: 100%;
 }
 
-table.code_aktivitaeten {
+/*table.code_aktivitaeten {
   min-width: 300px;
 }
 
@@ -19,5 +19,5 @@ table.table-hover tbody :hover {
   margin-top: 3px;
   width: 50px;
   height: 20px;
-}
+}*/
 
