--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.css
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.css
@@ -13,4 +13,8 @@
 .input-group-text {
   margin-left: 8px; }
 
+.col-md-10 .line {
+  height: 2px;
+  width: 90%; }
+
 /*# sourceMappingURL=gruppe-edit.component.css.map */
