--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppen-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppen-liste.component.html
@@ -1,8 +1,8 @@
 <h3>{{title}}</h3>
 <div *ngIf="gruppen.length > 0">
-  <div class="table-responsive">
+  <div class="table-responsive table-striped">
     <table class="table table-hover gruppen">
-      <thead>
+      <!--<thead>
       <tr>
         <th></th>
         <th *ngIf="globals.bp_isMidOrWideScreen">Id</th>
@@ -12,7 +12,7 @@
         <th></th>
         <th></th>
       </tr>
-      </thead>
+      </thead>-->
       <tbody>
       <tr *ngFor="let gruppe of gruppen"
           [class.selected]="gruppe === selectedGruppe"
@@ -48,14 +48,28 @@
       </tr>
       </tbody>
     </table>
-    <button type="submit"
+
+    <div class="container-fluid">
+      <div class="row">
+        <button class="btn btn-sm btn-primary ml-auto"
+                (click)="onCreate()">
+          <i class="fa fa-plus-circle"></i>
+          Gruppe erstellen
+        </button>
+      </div>
+    </div>
+
+
+
+    <!--<button type="submit"
             (click)="onCreate()"
             class="btn btn-sm btn-success">
       <i class="fas fa-plus-circle"></i>
       Gruppe erstellen
-    </button>
+    </button>-->
   </div>
 </div>
+
 
 
 
