--- a/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-liste.component.html
@@ -1,8 +1,20 @@
-<h3>{{title}}</h3>
+<div class="container-fluid">
+  <div class="row">
+    <h4>{{title}}</h4>
+    <button *ngIf="!showAllData"
+            class="btn btn-sm btn-primary ml-auto"
+            (click)="onCreate()">
+      <i class="fa fa-plus-circle"></i>
+      neuer Teilnehmer
+    </button>
+  </div>
+</div>
+
+
 <div *ngIf="myTeilnehmer.length > 0">
 <!--<div class="suggestion" *ngIf="myTeilnehmer">-->
   <div class="table-responsive">
-    <table class="table table-hover questions">
+    <table class="table table-hover questions table-striped">
       <thead>
       <tr>
         <th>Name</th>
@@ -13,7 +25,9 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let gruppenteilnehmer of myTeilnehmer">
+      <tr *ngFor="let gruppenteilnehmer of myTeilnehmer"
+          [class.selected]="gruppenteilnehmer === selectedTeilnehmer"
+          (click)="onEdit(gruppenteilnehmer)">
         <td>{{gruppenteilnehmer.Vorname}} {{gruppenteilnehmer.Nachname}}</td>
         <td *ngIf="globals.bp_isMidOrWideScreen">{{gruppenteilnehmer.GruppeCode}}</td>
         <td *ngIf="globals.bp_isMidOrWideScreen">{{gruppenteilnehmer.Berechtigungen}}</td>
@@ -43,8 +57,8 @@
   Diese Gruppe hat (noch) keine Teilnehmer: klicke auf <strong>Neuen Teilnehmer erstellen</strong> Button um die Erste zu erfassen!
 </div>
 
-<button *ngIf="!showAllData" (click)="onCreate()" class="btn btn-sm btn-primary">
+<!--<button *ngIf="!showAllData" (click)="onCreate()" class="btn btn-sm btn-primary">
   <i class="fa fa-plus-circle"></i>
   Neuen Teilnehmer erstellen
-</button>
+</button>-->
 
