20190129: Login seitens Dot.Net Core 20190128: kleine Designanpassungen 20190127: heureka, das erste Mal die App online auf den Webserver gelegt :-) 20190123: Test Produktiv, d.h. ng --prod es sind noch einige Fehlermeldungen zu elimieren 20190118: div. Anpassungen, damit auf dem IPhone die Bildschirminhalte nicht über 100% gross werden -> dies führt zu komischen Vergrösserungseffekten bei Eingaben, z.B. Datum und Uhrzeit oder auch bei Select's 20190114: Commit 20190104: wie 20190103, aber neu werden Breakpointänderungen live aktualisiert (erstmal bei Komp. "termin-liste")           -> neu: globale Variablen via Angular dependency injection (Singleton in AppModule)           -> Breakpoints werden in AppModule über den Window-Resizeevent aktualisiert 20190103: Breakpoint-Handling, Ein-/Ausblenden von Spalten je nach Breakpoints 20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
@@ -14,7 +14,7 @@
 <div *ngIf="code_aktivitaeten.length > 0">
   <div class="table-responsive">
     <table class="table table-hover table-striped questions">
-      <thead>
+      <thead  *ngIf="globals.bp_isMidOrWideScreen">
       <tr>
         <th>Code</th>
         <th>Bezeichnung</th>
