--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.scss
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.scss
@@ -2,14 +2,19 @@
   width: 100%;
 }
 
-/*table.code_aktivitaeten {
+table.code_aktivitaeten {
   min-width: 300px;
 }
 
-.table thead tr th {
+.table  {
+  border-top: 3px solid #8ec4e5;
+  border-bottom: 1px solid #8ec4e5;
+}
+
+/*.table thead tr th {
   border-bottom: 2px solid #8ec4e5;
   border-top: 5px solid #8ec4e5;
-}
+}*/
 
 table.table-hover tbody :hover {
   background-color: rgba(158, 204, 229, 0.23);
@@ -19,5 +24,5 @@ table.table-hover tbody :hover {
   margin-top: 3px;
   width: 50px;
   height: 20px;
-}*/
+}
 
