20190129: Login seitens Dot.Net Core + Vorbereitung Login auf Seite Angular 20190128: kleine Designanpassungen 20190127: heureka, das erste Mal die App online auf den Webserver gelegt :-) 20190123: Test Produktiv, d.h. ng --prod es sind noch einige Fehlermeldungen zu elimieren 20190118: div. Anpassungen, damit auf dem IPhone die Bildschirminhalte nicht über 100% gross werden -> dies führt zu komischen Vergrösserungseffekten bei Eingaben, z.B. Datum und Uhrzeit oder auch bei Select's 20190114: Commit 20190104: wie 20190103, aber neu werden Breakpointänderungen live aktualisiert (erstmal bei Komp. "termin-liste")           -> neu: globale Variablen via Angular dependency injection (Singleton in AppModule)           -> Breakpoints werden in AppModule über den Window-Resizeevent aktualisiert 20190103: Breakpoint-Handling, Ein-/Ausblenden von Spalten je nach Breakpoints 20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,4 @@
-<div *ngIf="nav.visible" class="main-nav">
-  <!--<nav class="navbar navbar-expand-md navbar-light bg-light mb-4">-->
-  <!--<nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd;">-->
+<!--<div *ngIf="nav.visible" class="main-nav">
   <nav class="navbar navbar-default navbar-expand-md navbar-light box-shadow">
     <a class="navbar-image" [routerLink]="['/home']">
       <img src="/dist/logo.png" alt="Gruppenplaner"/>
@@ -54,7 +52,7 @@
       </ul>
     </div>
   </nav>
-</div>
+</div>-->
 
 
 
